# valloc

./: .gitignore  Cargo.toml  README.md  build.rs  cbindings.toml  docs.md
examples/: c_mem_test.rs  c_test.rs  mem_test.c  test.c  valloc_shell.rs
src/: allocator.rs  ffi.rs  lib.rs  pointer.rs  tests.rs  virtual_memory.rs  vmem.rs
src/ffi/: buffer.rs  cvalloc.rs  docs.md  mod.rs  pointer.rs
valloc_test/: Cargo.toml
valloc_test/src/: main.rs
