[package]
name = "valloc"
version = "0.0.2"
edition = "2021"

[lib]
name = "valloc"
crate-type = ["staticlib"]

[features]
C = ["dep:cbindgen"]

[dependencies]
# not needed for the library, IF you don't need to generate the "C"/"CXX" bindings
cbindgen = { version = "0.26.0", optional = true }

[[example]]
crate-type = ["bin"]
name = "c_test"

[[example]]
name  = "valloc_shell"
test  = false
bench = false
